[tool.poetry]
name = "lmDemo"
version = "0.1.0"
description = ""
authors = ["chase mateusiak <chase.mateusiak@gmail.com>"]
exclude = ['temp','docs','site']

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs = "^1.4.0"
mkdocstrings = "^0.19.0"
mkdocs-section-index = "^0.3.4"
mkdocs-jupyter = "^0.22.0"
mkdocstrings-python = "^0.7.1"
memory-profiler = "^0.60.0"

[tool.poetry.scripts]
lm_demo = {callable="lmdemo:__main__.main"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
