[tool.poetry]
name = "lmdemo"
version = "0.1.0"
description = ""
authors = ["chase mateusiak <chase.mateusiak@gmail.com>"]
exclude = ['temp','docs','site']

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs = "^1.4.0"
mkdocstrings-python = "^0.7.1"
mkdocs-jupyter = "^0.22.0"
mkdocs-section-index = "^0.3.4"

[tool.poetry.scripts]
lm_demo = "lmdemo:__main__.main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
